fix text letter spacing

--- a/gulp/blocks/footer/_footer.scss
+++ b/gulp/blocks/footer/_footer.scss
@@ -25,6 +25,7 @@
     text-transform: uppercase;
     color: $color-white;
     margin-bottom: 8px;
+    letter-spacing: .125em;
   }
 
   &__social {
