--- a/static/css/style.css
+++ b/static/css/style.css
@@ -206,7 +206,8 @@ a {
     font-size: 12px;
     text-transform: uppercase;
     color: #fff;
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+    letter-spacing: .125em; }
   .footer__social {
     display: -webkit-box;
     display: -ms-flexbox;
